--- a/.github/flujos de trabajo/maven.yml
+++ b/.github/flujos de trabajo/maven.yml
@@ -22,7 +22,7 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
     - name: Copilar con Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B clean package --file pom.xml
     - name: subir.jar
       uses: actions/upload-artifact@v1
       with:
